
import Foundation

public struct AccessibilityIdentifier {
    static let transactionSummaryCell = "AccessibilityIdentifierTransactionSummaryCell"
    static let transactionCell = "AccessibilityIdentifierTransactionCell"
    static let amountTextField = "AccessibilityIdentifierAmountTextField"
    static let typeTextField = "AccessibilityIdentifierTypeTextField"
    static let descriptionTextField = "AccessibilityIdentifierDescriptionTextField"
    static let addTransactionButton = "AccessibilityIdentifierAddTransactionButton"
    static let addBarButtonItem = "AccessibilityIdentifierAddBarButtonItem"
    static let doneBarButtonItem = "AccessibilityIdentifierDoneBarButtonItem"
}
